--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctx-core/pnpm-tools",
-  "version": "5.0.4",
+  "version": "5.0.5",
   "description": "Tools for the @ctx-core monorepo",
   "keywords": [
     "ctx-core"
@@ -28,7 +28,7 @@
   "dependencies": {
     "esm": "^3.2.25",
     "globby": "^11.0.1",
-    "js-yaml": "~3.14.0"
+    "js-yaml": "3.14.1"
   },
   "devDependencies": {
     "@types/glob": "~7.1.3",
