--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "6.0.11",
+	"version": "6.1.0",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -33,6 +33,7 @@
 	},
 	"devDependencies": {
 		"@types/glob": "~7.1.3",
+		"@types/js-yaml": "^4.0.1",
 		"typescript": "^4.2.4"
 	},
 	"publishConfig": {
