--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "6.1.2",
+	"version": "6.2.0",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -32,6 +32,7 @@
 		"js-yaml": "4.1.0"
 	},
 	"devDependencies": {
+		"@ctx-core/monorepo": "workspace:^15.2.0",
 		"@types/glob": "~7.1.3",
 		"@types/js-yaml": "^4.0.1",
 		"typescript": "^4.2.4"
