--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"target": "ES2018",
 		"composite": true,
 		"declaration": true,
+		"sourceMap": true,
 		"noEmitOnError": true,
 		"noErrorTruncation": true,
 		"module": "esnext",
@@ -20,16 +21,20 @@
 			"../../node_modules/@types",
 			"node_modules/@types"
 		],
-		"outDir": ".",
-		"declarationDir": ".",
+		"rootDir": "src",
+		"outDir": "dist",
+		"mapRoot": "dist",
+		"declarationDir": "types",
 		"importsNotUsedAsValues": "error",
 		"lib": [
 			"dom",
 			"ES2020"
-		]
+		],
+		"strict": true
 	},
 	"exclude": [
-		"node_modules"
+		"node_modules",
+		"types"
 	],
 	"references": []
 }
