--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "6.2.1",
+	"version": "6.3.0",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
 	],
-	"homepage": "https://github.com/ctx-core/word-segmentation#readme",
+	"homepage": "https://github.com/ctx-core/pnpm-tools#readme",
 	"bugs": {
-		"url": "https://github.com/ctx-core/word-segmentation/issues"
+		"url": "https://github.com/ctx-core/pnpm-tools/issues"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ctx-core/word-segmentation/issues"
+		"url": "https://github.com/ctx-core/pnpm-tools/issues"
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
@@ -22,9 +22,10 @@
 		"_projects_json": "./bin/_projects_json.js"
 	},
 	"scripts": {
-		"compile": "./node_modules/.bin/tsc -b && chmod a+x bin/*.js",
-		"exec": "$@",
-		"build": "npm run compile"
+		"build": "npm run compile",
+		"clean": "rm -f tsconfig.tsbuildinfo",
+		"compile": "./node_modules/.bin/tsc -b .",
+		"exec": "$@"
 	},
 	"dependencies": {
 		"esm": "^3.2.25",
@@ -32,7 +33,7 @@
 		"js-yaml": "4.1.0"
 	},
 	"devDependencies": {
-		"@ctx-core/monorepo": "workspace:^15.2.2",
+		"@ctx-core/monorepo": "workspace:^15.3.0",
 		"@types/glob": "~7.1.3",
 		"@types/js-yaml": "^4.0.1",
 		"typescript": "^4.2.4"
