--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
 		"rootDir": "src",
 		"outDir": "dist",
 		"mapRoot": "dist",
-		"declarationDir": "types",
+		"declarationDir": "dist",
 		"importsNotUsedAsValues": "error",
 		"lib": [
 			"dom",
@@ -34,7 +34,7 @@
 	},
 	"exclude": [
 		"node_modules",
-		"types"
+		"dist"
 	],
 	"references": []
 }
