--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "6.3.1",
+	"version": "6.3.2",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -28,12 +28,13 @@
 		"exec": "$@"
 	},
 	"dependencies": {
+		"@ctx-core/function": "workspace:^17.11.1",
+		"@ctx-core/monorepo": "workspace:^15.3.2",
 		"esm": "^3.2.25",
 		"globby": "^11.0.3",
 		"js-yaml": "4.1.0"
 	},
 	"devDependencies": {
-		"@ctx-core/monorepo": "workspace:^15.3.2",
 		"@types/glob": "~7.1.3",
 		"@types/js-yaml": "^4.0.1",
 		"typescript": "^4.3.2"
