--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "8.0.6",
+	"version": "8.0.7",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -19,7 +19,7 @@
 	"module": "./index.js",
 	"types": "./index.ts",
 	"bin": {
-		"_projects_json": "./bin/_projects_json.js"
+		"projects_json_": "./bin/projects_json_.js"
 	},
 	"scripts": {
 		"build": "npm run clean && npm run compile",
@@ -29,7 +29,6 @@
 	},
 	"dependencies": {
 		"@ctx-core/function": "workspace:^19.1.6",
-		"@ctx-core/monorepo": "workspace:^17.1.3",
 		"esm": "^3.2.25",
 		"globby": "^11.0.4",
 		"js-yaml": "4.1.0"
