--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,7 @@
 		"mapRoot": "src",
 		"declarationDir": "src",
 		"importsNotUsedAsValues": "error",
-		"lib": [
-			"dom",
-			"ES2020"
-		],
+		"lib": ["dom", "ESNext"],
 		"strict": true
 	},
 	"exclude": [
