--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "8.0.14",
+	"version": "8.0.15",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -34,8 +34,8 @@
 		"js-yaml": "4.1.0"
 	},
 	"devDependencies": {
-		"@types/glob": "~7.1.3",
-		"@types/js-yaml": "^4.0.1",
+		"@types/glob": "7.1.4",
+		"@types/js-yaml": "^4.0.2",
 		"typescript": "^4.3.5"
 	},
 	"publishConfig": {
