--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
+	"type": "module",
 	"main": "./index.js",
 	"module": "./index.js",
 	"types": "./index.ts",
