--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 	},
 	"scripts": {
 		"build": "npm run compile",
-		"clean": "rm -rf dist",
+		"clean": "rimraf dist",
 		"compile": "swc src --out-dir dist --copy-files --source-maps --config-file .swcrc",
 		"exec": "$@"
 	},
@@ -37,6 +37,7 @@
 		"@swc/core": "^1.2.120",
 		"@types/glob": "7.2.0",
 		"@types/js-yaml": "^4.0.5",
+		"rimraf": "^3.0.2",
 		"typescript": "next"
 	},
 	"publishConfig": {
