--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.0.32",
+	"version": "9.0.33",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -28,7 +28,7 @@
 		"exec": "$@"
 	},
 	"dependencies": {
-		"@ctx-core/function": "workspace:^20.2.12",
+		"@ctx-core/function": "workspace:^20.2.13",
 		"globby": "^12.0.2",
 		"js-yaml": "4.1.0"
 	},
@@ -44,5 +44,6 @@
 		"access": "public",
 		"cache": "~/.npm"
 	},
-	"type": "module"
+	"type": "module",
+	"svelte": "./dist/index.js"
 }
