--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.0.33",
+	"version": "9.0.34",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -11,13 +11,17 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ctx-core/pnpm-tools/issues"
+		"url": "https://github.com/ctx-core/pnpm-tools.git"
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
-	"main": "./index.js",
-	"module": "./index.js",
-	"types": "./index.ts",
+	"exports": {
+		".": {
+			"import": "./dist/index.js",
+			"types": "./src/index.ts"
+		},
+		"./package.json": "./package.json"
+	},
 	"bin": {
 		"projects_json_": "./bin/projects_json_.mjs"
 	},
@@ -28,7 +32,7 @@
 		"exec": "$@"
 	},
 	"dependencies": {
-		"@ctx-core/function": "workspace:^20.2.13",
+		"@ctx-core/function": "workspace:^20.2.14",
 		"globby": "^12.0.2",
 		"js-yaml": "4.1.0"
 	},
