--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.0.37",
+	"version": "9.0.38",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -15,7 +15,7 @@
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
-	"types": "./dist/index.d.ts",
+	"types": "./src/index.ts",
 	"exports": {
 		".": {
 			"import": "./dist/index.js"
@@ -35,7 +35,7 @@
 		"exec": "$@"
 	},
 	"dependencies": {
-		"@ctx-core/function": "workspace:^20.2.17",
+		"@ctx-core/function": "workspace:^20.2.18",
 		"globby": "^12.0.2",
 		"js-yaml": "4.1.0"
 	},
