--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
-	"types": "./dist/index.d.ts",
+	"types": "./lib/index.d.ts",
 	"exports": {
 		".": {
-			"import": "./dist/index.js"
+			"import": "./lib/index.js"
 		},
 		"./package.json": "./package.json"
 	},
@@ -27,11 +27,11 @@
 	},
 	"scripts": {
 		"build": "npm run compile",
-		"clean": "rimraf dist && npm run clean:tsbuildinfo",
-		"clean:tsbuildinfo": "rm -f tsconfig.tsbuildinfo && rm -f dist/**/*.d.ts",
+		"clean": "rimraf lib && npm run clean:tsbuildinfo",
+		"clean:tsbuildinfo": "rm -f tsconfig.tsbuildinfo && rm -f lib/**/*.d.ts",
 		"compile": "npm run compile:source && npm run compile:declaration",
-		"compile:source": "swc src --out-dir dist --copy-files --source-maps --config-file .swcrc",
-		"compile:declaration": "npm run clean:tsbuildinfo && tsc --declaration --emitDeclarationOnly --declarationDir dist",
+		"compile:source": "swc src --out-dir lib --copy-files --source-maps --config-file .swcrc",
+		"compile:declaration": "npm run clean:tsbuildinfo && tsc --declaration --emitDeclarationOnly --declarationDir lib",
 		"exec": "$@"
 	},
 	"dependencies": {
@@ -52,5 +52,5 @@
 		"cache": "~/.npm"
 	},
 	"type": "module",
-	"svelte": "./dist/index.js"
+	"svelte": "./lib/index.js"
 }
