--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.0.43",
+	"version": "9.0.44",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -35,7 +35,7 @@
 		"exec": "$@"
 	},
 	"dependencies": {
-		"@ctx-core/function": "workspace:^20.2.24",
+		"@ctx-core/function": "workspace:^20.2.25",
 		"globby": "^12.0.2",
 		"js-yaml": "4.1.0"
 	},
@@ -52,5 +52,6 @@
 		"cache": "~/.npm"
 	},
 	"type": "module",
-	"svelte": "./lib/index.js"
+	"svelte": "./lib/index.js",
+	"sideEffects": false
 }
