--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"exec": "$@"
 	},
 	"dependencies": {
-		"@ctx-core/function": "workspace:^20.4.0",
+		"@ctx-core/function": "^20.4.0",
 		"globby": "^13.1.1",
 		"js-yaml": "4.1.0"
 	},
