--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.0.46",
+	"version": "9.0.47",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -35,7 +35,7 @@
 		"exec": "$@"
 	},
 	"dependencies": {
-		"@ctx-core/function": "^20.4.0",
+		"@ctx-core/function": "workspace:*",
 		"globby": "^13.1.1",
 		"js-yaml": "4.1.0"
 	},
