--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.0.48",
+	"version": "9.0.49",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -17,9 +17,7 @@
 	"author": "Brian Takita",
 	"types": "./lib/index.d.ts",
 	"exports": {
-		".": {
-			"import": "./lib/index.js"
-		},
+		".": "./lib/index.js",
 		"./package.json": "./package.json"
 	},
 	"bin": {
@@ -35,7 +33,7 @@
 		"exec": "$@"
 	},
 	"dependencies": {
-		"@ctx-core/function": "^20.6.0",
+		"@ctx-core/function": "workspace:^20.6.1",
 		"globby": "^13.1.1",
 		"js-yaml": "4.1.0"
 	},
