--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.0.61",
+	"version": "9.0.62",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -34,8 +34,10 @@
 	},
 	"dependencies": {
 		"@ctx-core/function": "^21.4.0",
+		"dir-glob": "^3.0.1",
 		"globby": "^13.1.2",
-		"js-yaml": "4.1.0"
+		"js-yaml": "4.1.0",
+		"path-type": "^5.0.0"
 	},
 	"devDependencies": {
 		"@swc/cli": "^0.1.57",
