--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.0.62",
+	"version": "9.0.63",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -33,11 +33,12 @@
 		"exec": "$@"
 	},
 	"dependencies": {
+		"@ctx-core/array": "workspace:^26.7.8",
 		"@ctx-core/function": "^21.4.0",
 		"dir-glob": "^3.0.1",
-		"globby": "^13.1.2",
 		"js-yaml": "4.1.0",
-		"path-type": "^5.0.0"
+		"path-type": "^5.0.0",
+		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
 		"@swc/cli": "^0.1.57",
