--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"exec": "$@"
 	},
 	"dependencies": {
-		"@ctx-core/array": "workspace:^26.7.8",
+		"@ctx-core/array": "26.8.0",
 		"@ctx-core/function": "^21.6.0",
 		"dir-glob": "^3.0.1",
 		"js-yaml": "4.1.0",
