--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/array": "26.12.12",
-		"@ctx-core/function": "^21.17.0",
+		"@ctx-core/array": "^26.12.25",
+		"@ctx-core/function": "^21.17.12",
 		"dir-glob": "^3.0.1",
 		"js-yaml": "4.1.0",
 		"path-type": "^5.0.0",
