@@ -1,5 +1,25 @@ # @ctx-core/pnpm-tools
## 9.2.0

### Minor Changes

- tsconfig:

"module": "ESNext"
"moduleResolution": "nodenext"
"target": "ESNext"

### Patch Changes

- package.json: - "svelte": "./src/index.js"
- Updated dependencies
- Updated dependencies
- Updated dependencies
- Updated dependencies
- @ctx-core/array@27.0.0
- @ctx-core/function@21.21.0

## 9.1.80

### Patch Changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.1.80",
+	"version": "9.2.0",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -16,10 +16,15 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
-	"types": "./src/index.d.ts",
-	"svelte": "./src/index.js",
+	"files": [
+		"*.d.ts",
+		"./bin",
+		"./project_json_",
+		"./projects_json_"
+	],
+	"types": "./index.d.ts",
 	"exports": {
-		".": "./src/index.js",
+		".": "./index.js",
 		"./package.json": "./package.json"
 	},
 	"bin": {
@@ -35,8 +40,8 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/array": "^26.15.9",
-		"@ctx-core/function": "^21.20.2",
+		"@ctx-core/array": "^27.0.0",
+		"@ctx-core/function": "^21.21.0",
 		"dir-glob": "^3.0.1",
 		"js-yaml": "4.1.0",
 		"path-type": "^5.0.0",
