# @ctx-core/pnpm-tools
## 9.2.157

### Patch Changes

- package.json: author: url,email
- Updated dependencies
- ctx-core@6.6.1

## 9.2.156

### Patch Changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/pnpm-tools",
-	"version": "9.2.156",
+	"version": "9.2.157",
 	"description": "Tools for the @ctx-core monorepo",
 	"keywords": [
 		"ctx-core"
@@ -14,7 +14,11 @@
 		"url": "https://github.com/ctx-core/pnpm-tools.git"
 	},
 	"license": "Apache-2.0",
-	"author": "Brian Takita",
+	"author": {
+		"name": "Brian Takita",
+		"url": "https://briantakita.me",
+		"email": "info+ctx-core-pnpm-tools@briantakita.me"
+	},
 	"type": "module",
 	"files": [
 		"*.d.ts",
@@ -43,7 +47,7 @@
 		"disable:test:unit:coverage": "c8 pnpm test:unit"
 	},
 	"dependencies": {
-		"ctx-core": "^6.6.0",
+		"ctx-core": "^6.6.1",
 		"dir-glob": "^3.0.1",
 		"js-yaml": "4.1.0",
 		"path-type": "^5.0.0",
